# hass-emerald-ems

./: .devcontainer.json  .editorconfig  .gitignore  .ruff.toml  README.md  hacs.json  pyproject.toml  requirements.txt  requirements_export.txt
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml
config/: configuration.yaml
custom_components/emerald_ems/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py
custom_components/emerald_ems/translations/: en.json
docs/: Emerald EMS.postman_collection.json
scripts/: clean  develop  export_requirements  setup
tests/: .pylintrc  conftest.py
